--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ a:not([href]):not([tabindex]):hover {
     padding: 40px 0;
     background:whitesmoke;
 }
-.partners{
+.bottom{
 
 }
 .imprint-content{
@@ -923,6 +923,12 @@ button:focus {
     align-items: center;
     width: 100%;
 }
+.topServices{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
 .tech-item{
     border: none !important;
     background: transparent !important;
@@ -1534,10 +1540,10 @@ textarea {
     overflow: hidden;
 }
 .contact_location-title{
-    font-size: 25px;
-    color: #353535;
+    font-size: 22px;
+    color: #444444;
     margin-bottom: 1.2rem;
-    font-weight: 580;
+    font-weight: 530;
 }
 
 #contact .contact-block {
